--- a/index.html
+++ b/index.html
@@ -1,19 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
-  <title>Bacon Fansite</title>
-  <link rel="stylesheet" href="CSS/Styles.css">
+  <title>Richard Avello</title>
+  <link rel="stylesheet" href="CSS/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Acme|Pacifico|Russo+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <h1 id="heading">I Love Bacon</h1>
-  <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
-  <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
-  <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
-  <img class="bacon" src="https://emojipedia-us.s3.amazonaws.com/thumbs/240/apple/118/bacon_1f953.png" alt="bacon-img">
-  <img class="broccoli circular" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/198/broccoli_1f966.png" alt="broccoli-img">
+  <div class="top-container">
+    <img class="top-cloud" src="Images/cloud.png" alt="cloud-img">
+    <h1>I'm Richard</h1>
+    <p>A web <span class=dev>dev</span>eloper</p>
+    <img class="bottom-cloud" src="Images/cloud.png" alt="cloud-img">
+    <img src="Images/mountain.png" alt="mountain-img">
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img src="Images/man (2).png" alt="">
+      <h2>Hello.</h2>
+      <p>I'm a tech enthusiast who enjoys learning all aspects of tech and is
+        passionate about it as well. I'm also an avid gamer who can be quite
+        competitive but fun and humorous. My dream is to become a freelance
+        developer and to become an ethical hacker one day.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="Webdev" src="Images/browser (1).png" alt="coding image">
+        <h3>Web Development & Design</h3>
+        <p>A developer and designer passionate about his work, I help create your website to bring out your vision!!</p>
+      </div>
+      <div class="skill-row">
+        <img class="Security" src="Images/cyber-security (1).png" alt="Hacker stealing information">
+        <h3>Cybersecurity</h3>
+        <p>Nothing can ruin a business like data theft can, let me help you protect your information to keep your website operating smoothly!!</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <a class="btn" href="mailto:Orisumi86@gmail.com">CONTACT ME</a>
+    </div>
+  </div>
+
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    <p>© 2019 Richard Avello</p>
+  </div>
+
 </body>
 
 </html>
